--- a/pages/index.html
+++ b/pages/index.html
@@ -13,8 +13,12 @@
 </div>
 
 <main>
-
     <div class="map">
+        <div id="players">
+
+        </div>
+        <div id="hexes"></div>
+
     </div>
 </main>
 <script src="/data/umbrella.js"></script>
