--- a/pages/index.html
+++ b/pages/index.html
@@ -22,6 +22,7 @@
     </div>
 </main>
 <script src="/data/umbrella.js"></script>
+<script src="/data/socket.io.min.js"></script>
 <script type="module" src="/data/main.js"></script>
 </body>
 </html>
